--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,7 +2,7 @@ name: hello-world
 'on': push
 jobs:
   my-job:
-    runs-on: ubuntu-latest
+    runs-on: 7899087 ubuntu-latest
     steps:
       - name: my-step
         run: echo "Hello World!"
